fixed btn spacing in global nav on mobile

--- a/client/src/components/GlobalNavBar/style.css
+++ b/client/src/components/GlobalNavBar/style.css
@@ -16,3 +16,17 @@
     border-bottom: 2px solid #0F4457;
     padding: 30px 0;
 }
+
+
+@media only screen and (max-width: 575px) {
+
+    .global-nav__logo {
+        margin-bottom: 30px;
+        width: 220px;
+        transition: ease .5s;
+    }
+  
+  
+  
+  }
+  
